--- a/markdown.Rmd
+++ b/markdown.Rmd
@@ -62,37 +62,62 @@ Since my app doesn't do much in the first place, I wanted it to at least be some
 
 Shiny does allow you to change the apperance of your UI, although that does require you to know some HTML and CSS or be willing to learn that.
 
-With Shiny, the front-end (or UI) is largely (if not entirely) based upon Bootstrap, a very popular framework for building responsive website layouts without needing to loose your mind with all the CSS  
+With Shiny, the front-end (or UI) is largely (if not entirely) based upon Bootstrap, a very popular framework for building responsive website layouts without needing to loose your mind learning CSS yourself.  
 
-That said, 
-
-
+That said, Bootstrap can make your life hard when trying to apply your own style on top of its default classes. 
 
 
-For the calendar/date picker I did try/considered a few options: the default one from the Shiny dateInput() function comes with very few options to change its appearance, and even when I tryied playing around adding extra CSS (on top of the build-in Bootstrap classes it comes with)  
+
+
+For the calendar/date picker I did try/considered a few options: the default one from the Shiny dateInput() function comes with very few options to change its appearance, and even when I tryed playing around adding extra CSS (on top of the build-in Bootstrap classes it comes with)  the result was sub-optimal  
 
 turned out to be difficult to style it as I wished, especially the poup I also couldn't find a way to get rid of the pop-
 
+Luckly I then sumbled upon the shinyWidget package and my day immediately improved 10x. shinyWidget offers plenty of stylish and highly customizable input elements to be added to your shiny app directly from R without having to deal with custom CSSs.
+I ended up using the airdatePicker element to add an in-line (yes that's right no more annying reactive-unfriendly poup-up calendars)
+and used the awesome button from xxxxx that comes from actnButton().
+
+
+
+#Back-end: 
+
+The back-end of a ShinyApp is the R code that runs in the background when the user interacts with the input elements of your app. Ideally th
+The
+
+My app is not very data-sciency, no questions about that. It could have been much more efficienlty written with some other web-oriented languagage without the need to bring R into it. 
+But it's also true that you should simply use whatever language you know/are most comfortable with, and for me, it happens to be R so **shruggy**
+
+As mentioned before, this app doens't relay on R do to some heavy-weight computational-intensive data-science work. in fact. this app doesn't *need* to use R at all and essentially was made more as an excercise/learning experience than anthing else. 
+
+Nontheless, some R code was acutally written for the server side of the app and what it does is querying the setlist.fm API with a GET request and returns a brunch of info about a single All Time Low concert from the useer selected date (if there was one).
+
+The httr package makes it very easy to bring external data from the outside into R and the setlist.fm API offers quite a lot of endpoints to chose from. Since I was only interested in getting data from a single concert the setlist endpoint was perfect for the task. 
+
+
+The whole block of code above was then placed inside an eventReactive function and linked to the action button below the calendar. WHat this does is delaying the execution of the code until the GO button is clicked. THis also mean that there is no reaction associated with the calendar itself, and nothing happens on the server once the user has selected the date. 
+
+Since the output for this app is simply some new text and a tweet button to show at the bottom of the page, the renderUI/UIoutput functions worked out just fine.
 
 
 
 
-** I actually never took the first introductorty course on Data Reproducibility and gitHub but went straight to the R Programming. 
+
+** I actually never took the first introductorty course on Data Reproducibility and gitHub but went straight to the R Programming. A bit ironic considering im writing this post in R Markdown and the source code for the Shiny App is 
 
 
-** Fun fact: the background photo I used was (by xxxxxxxxx ) is from  the Milan ATL show in April 2017 and I was actually there. 
-
+** Fun fact: the background photo I used was (by Luna Perri ) is from  the Milan ATL show in April 2017 and I was actually there. 
+http://www.recovery-magazine.com/2017/04/13/report-time-low-live-alcatraz-milano-10042017/
 
 
 ```{r cars}
-summary(cars)
+1-1
 ```
 
 ## Including Plots
 
 You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
+```{r pressure, echo=T}
 plot(pressure)
 ```
 
